--- a/package.json
+++ b/package.json
@@ -25,6 +25,7 @@
     "cssesc": "^3.0.0",
     "didyoumean": "^1.2.2",
     "dlv": "^1.1.3",
+    "dotenv": "^16.5.0",
     "eastasianwidth": "^0.2.0",
     "ejs": "^3.1.10",
     "emoji-regex": "^9.2.2",
