--- a/package.json
+++ b/package.json
@@ -25,7 +25,7 @@
     "cssesc": "^3.0.0",
     "didyoumean": "^1.2.2",
     "dlv": "^1.1.3",
-    "dotenv": "^16.5.0",
+    "dotenv": "^16.6.1",
     "eastasianwidth": "^0.2.0",
     "ejs": "^3.1.10",
     "emoji-regex": "^9.2.2",
@@ -57,6 +57,7 @@
     "mongoose": "^8.13.2",
     "mz": "^2.7.0",
     "nanoid": "^3.3.7",
+    "nodemailer": "^7.0.5",
     "nodemon": "^3.1.9",
     "normalize-path": "^3.0.0",
     "object-assign": "^4.1.1",
