--- a/backend/vercel.json
+++ b/backend/vercel.json
@@ -1,18 +1,9 @@
 {
+  "version": 2,
   "builds": [
-    {
-      "src": "backend/server.js",
-      "use": "@vercel/node"
-    }
+    { "src": "backend/api/**/*.js", "use": "@vercel/node" }
   ],
   "routes": [
-    {
-      "src": "/api/(.*)",
-      "dest": "backend/server.js"
-    },
-    {
-      "src": "/(.*)",
-      "dest": "frontend/source/$1"
-    }
+    { "src": "/api/(.*)", "dest": "backend/api/$1.js" }
   ]
 }
