--- a/backend/vercel.json
+++ b/backend/vercel.json
@@ -1,9 +1,15 @@
 {
-  "version": 2,
-  "builds": [
-    { "src": "backend/api/**/*.js", "use": "@vercel/node" }
-  ],
-  "routes": [
-    { "src": "/api/(.*)", "dest": "backend/api/$1.js" }
-  ]
-}
+    "builds": [
+      {
+        "src": "./server.js",
+        "use": "@vercel/node"
+      }
+    ],
+    "routes": [
+      {
+        "src": "/(.*)",
+        "dest": "/server.js"
+      }
+    ]
+  }
+  
