--- a/frontend/package.json
+++ b/frontend/package.json
@@ -5,6 +5,7 @@
   "name": "tailwindprac",
   "version": "1.0.0",
   "main": "index.js",
+  "build": "echo 'Nothing to build — deploying static site'",
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1"
   },
@@ -12,4 +13,6 @@
   "author": "",
   "license": "ISC",
   "description": ""
+
+  
 }
